Downgrade subtyping/cast failures from errors to warnings
Reviewed-by: vromero